# satorip2p

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  README.md  docker-compose.e2e.yml  docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DOCKER.md  EXAMPLES.md  MIGRATION_GUIDE.md  SECURITY.md  SIGNER_ROADMAP.md
examples/: neuron_integration.py
src/satorip2p/: __init__.py  api.py  config.py  metrics.py  peers.py  signing.py
src/satorip2p/blockchain/: __init__.py  reward_distributor.py  tx_builder.py
src/satorip2p/compat/: __init__.py  centrifugo.py  datamanager.py  pubsub.py  server.py
src/satorip2p/docker/: __init__.py  detection.py  publisher_node.py  relay_node.py  subscriber_node.py
src/satorip2p/electrumx/: __init__.py  client.py  connection.py
src/satorip2p/hybrid/: __init__.py  bridge.py  central_client.py  config.py  hybrid_peers.py
src/satorip2p/identity/: __init__.py  evrmore_bridge.py
src/satorip2p/integration/: __init__.py  auto_switch.py  fallback.py  (+3 more)
tests/: __init__.py  e2e_bootstrap.py  e2e_peer.py  test_api_e2e.py  test_api_metrics.py  test_bandwidth.py  test_compat.py  test_consensus.py  test_decentralization_protocols.py  test_delegation.py  test_docker_p2p.py  test_electrumx.py  test_hybrid.py  test_integration.py  test_integration_enhanced.py  test_lending.py  test_load.py  test_neuron_integration.py  test_new_protocols.py  test_peers.py  test_pubsub_e2e.py  test_rewards.py  test_signer.py  test_signing.py  test_storage.py  test_tx_builder.py  test_uptime.py  test_versioning.py
(+38 files in other folders)
